# agentguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: index.md
docs/api/: audit.md  cli.md  compliance.md  guardrails.md  mcp.md  policies.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: audit-logging.md  cli-reference.md  compliance-reports.md  mcp-integration.md  policy-authoring.md  runtime-guardrails.md
src/agentguard/: __init__.py  __main__.py  cli.py  release.py
src/agentguard/audit/: __init__.py  log.py  models.py
src/agentguard/compliance/: __init__.py  eu_ai_act.py  models.py  renderers.py
src/agentguard/guardrails/: __init__.py  guardrail.py  models.py
src/agentguard/integrations/: __init__.py
src/agentguard/mcp/: __init__.py  __main__.py  server.py
src/agentguard/policies/: __init__.py  builtins.py  discovery.py  guard.py  loader.py  models.py
src/agentguard/policies/builtin_policies/: no-data-deletion.yaml  no-env-commit.yaml  no-hook-bypass.yaml  no-secret-exposure.yaml
tests/unit/: test_audit.py  test_builtins.py  test_cli.py  test_compliance_models.py  test_discovery.py  test_eu_ai_act.py  test_guard.py  test_guardrail.py  test_guardrail_models.py  test_mcp_main.py  test_mcp_server.py  test_policy_loader.py  test_policy_models.py  test_release.py  test_renderers.py  test_version.py
